# open_arms

./: README.md
open_arms_common/: CMakeLists.txt  README.Md  package.xml  setup.py
open_arms_common/src/open_arms_constants/: open_arms_constants.py
open_arms_description/: CMakeLists.txt  README.md  package.xml
open_arms_description/launch/: open_arms.launch
open_arms_description/meshes/collision/: link_5.STL  link_7.STL
open_arms_description/meshes/visual/: base.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_6.STL
open_arms_description/rviz/: urdf.rviz
open_arms_description/urdf/: open_arms.urdf.xacro
open_arms_driver/: CMakeLists.txt  README.md  package.xml
open_arms_driver/nodes/: degtorev_relay.py
open_arms_driver/src/: joint_states_relay.cpp
open_arms_driver/srv/: DegToRev.srv  MoveMotorArduino.srv  RobotAngleRelay.srv
open_arms_firmware/: README.md
open_arms_firmware/Robot_Motion/: Robot_Motion.ino
open_arms_firmware/Stepper_SoftwarePWM/: Stepper_SoftwarePWM.ino
open_arms_firmware/joint_rotation_testing/: joint_rotation_testing.ino
open_arms_firmware/libraries/OpenArmsFB/: OpenArmsFB.cpp  OpenArmsFB.h
open_arms_firmware/libraries/OpenArmsStepper/: OpenArmsStepper.cpp  OpenArmsStepper.h
open_arms_firmware/libraries/Potentiometer/: Potentiometer.cpp  Potentiometer.h
open_arms_firmware/libraries/open_arms_common/: open_arms_common.h
open_arms_firmware/libraries/open_arms_joint/: open_arms_joint.cpp  open_arms_joint.h
open_arms_firmware/libraries/open_arms_stepper/: open_arms_stepper.cpp  open_arms_stepper.h
open_arms_firmware/libraries/ros_lib/dispenser/: dispenser_action.h
open_arms_firmware/libraries/ros_lib/franka_msgs/: Errors.h  FrankaState.h  (+1 more)
open_arms_firmware/motor_encoder_testing/: motor_encoder_testing.ino
open_arms_firmware/move_motors/: move_motors.ino
open_arms_interface/: CMakeLists.txt  README.md  package.xml
open_arms_interface/launch/: move_motors.launch
open_arms_interface/nodes/: move_one_motor.py
open_arms_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
open_arms_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  open_arms.srdf  ros_controllers.yaml
open_arms_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  open_arms_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
(+8 files in other folders)
