<?xml version="1.0" ?>
<package format="2">
  <name>open_arms_common</name>
  <version>0.1.0</version>
  <description>common variables and constants for the Open Arms Project</description>

  <maintainer email="fanxiule@gmail.com">Xiule Fan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>